--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "async": "^2.6.0",
+    "glob": "^7.1.2",
     "lodash": "^4.17.4",
     "request": "^2.83.0",
     "xml2js": "^0.4.19"
