--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apostrophe-svg-sprites",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "SVG sprite elements as Pieces",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint . && mocha"
   },
   "repository": {
     "type": "git",
@@ -23,18 +23,21 @@
   },
   "homepage": "https://github.com/apostrophecms/apostrophe-svg-sprites#readme",
   "devDependencies": {
-    "eslint": "^4.2.0",
-    "eslint-config-punkave": "^1.0.8",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "apostrophe": "^2.89.1",
+    "eslint": "^4.19.1",
+    "eslint-config-apostrophe": "^2.0.2",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "mocha": "^6.1.4"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "glob": "^7.1.2",
-    "lodash": "^4.17.4",
-    "request": "^2.83.0",
+    "async": "^2.6.2",
+    "glob": "^7.1.4",
+    "lodash": "^4.17.11",
+    "request": "^2.88.0",
     "xml2js": "^0.4.19"
   },
   "engines": {
